# ccp-print-tool

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/formatter/: __init__.py  ccp_formatter.py  condition_formatter.py
src/models/: __init__.py  permit.py
src/parser/: __init__.py  json_parser.py  xml_parser.py
src/renderer/: pdf_renderer.py
standalone/: ccp-printer.html
static/: index.html
tests/: conftest.py  test_api.py  test_condition_formatter.py  test_formatter.py  test_json_parser.py  test_parser.py  test_renderer.py
tests/fixtures/: sample_outward.json  sample_permit.xml
