[project]
name = "ccp-print-tool"
version = "1.0.0"
description = "CCP (Cargo Clearance Permit) PDF generator from TradenetResponse XML"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "lxml>=5.1.0",
    "fpdf2>=2.7.0",
    "python-barcode[images]>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
ccp-print = "src.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
